--- a/Практическая_статистика_для_специалистов_Data_Science/Глава 1. Разведочный анализ данных/Глава 1. Разведочный анализ данных.ipynb
+++ b/Практическая_статистика_для_специалистов_Data_Science/Глава 1. Разведочный анализ данных/Глава 1. Разведочный анализ данных.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Копия R kernel.ipynb",
+      "name": "R kernel.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -206,43 +206,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 214
-        },
-        "id": "on9Ib0SvaHaJ",
-        "outputId": "84351813-800f-4200-c095-66f6a4aa5482"
+        "id": "QJYHvRJZq0RY"
       },
       "source": [
-        "state <- read.csv(file=\"state.csv\")"
+        "state <- read.csv(\"https://raw.githubusercontent.com/BcVlad/books/main/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F_%D1%81%D1%82%D0%B0%D1%82%D0%B8%D1%81%D1%82%D0%B8%D0%BA%D0%B0_%D0%B4%D0%BB%D1%8F_%D1%81%D0%BF%D0%B5%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D1%81%D1%82%D0%BE%D0%B2_Data_Science/statistics-for-data-scientists-master-ru/data/state.csv\")"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Warning message in file(file, \"rt\"):\n",
-            "“cannot open file 'state.csv': No such file or directory”\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "error",
-          "ename": "ERROR",
-          "evalue": "ignored",
-          "traceback": [
-            "Error in file(file, \"rt\"): cannot open the connection\nTraceback:\n",
-            "1. read.csv(file = \"state.csv\")",
-            "2. read.table(file = file, header = header, sep = sep, quote = quote, \n .     dec = dec, fill = fill, comment.char = comment.char, ...)",
-            "3. file(file, \"rt\")"
-          ]
-        }
-      ]
+      "execution_count": 45,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7FyGw17OaIVO"
+        "id": "oFmUsrVLvYEp"
       },
       "source": [
         ""
@@ -253,7 +228,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XZABa6uYaIX4"
+        "id": "ESM7LAYGvYHB"
       },
       "source": [
         ""
@@ -264,7 +239,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hXjJkbd-aIao"
+        "id": "Dd2RL6bbvYJf"
       },
       "source": [
         ""
@@ -275,7 +250,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UDy5OamzaIdL"
+        "id": "_whkpWl-vYL0"
       },
       "source": [
         ""
@@ -286,7 +261,62 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SRMRYTbWaIfQ"
+        "id": "a3bQwl7dvYOm"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WyDNM1RDvYRP"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i6FrAsRbvYTk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2BJtVvU4vYWG"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dJ6zKe_uvYYk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pfzDw-rweujO"
       },
       "source": [
         ""
